# SentiSight

./: .env.example  .gitignore  Dockerfile  Dockerfile.frontend  README.md  STARTUP_GUIDE.md  docker-compose.yml  main.py  pyproject.toml
api/: __init__.py  main.py  schemas.py
db/: schema.sql
deployment/: deploy.bat  deploy.sh
frontend/: app.py
notebooks/: 01_eda.ipynb
scripts/: check_gpu.py  measure_distilbert_load.py  quick_gpu_test.py  run_dashboard.py  run_tests.py  test_components.py  test_startup_time.py  test_startup_time_logging.py
src/: __init__.py  db.py  insights_engine.py  preprocessing.py
tests/: conftest.py  test_api.py  test_models.py  test_preprocessing.py
